--- a/.forestry/front_matter/templates/gallery.yml
+++ b/.forestry/front_matter/templates/gallery.yml
@@ -2,10 +2,29 @@
 label: Gallery
 hide_body: true
 fields:
-- name: gallery
-  type: image_gallery
-  config: {}
+# Title
+- type: text
+  name: title
+  label: Title
+# Description
+- type: text
+  name: description
+  label: Description
+# Gallery
+- type: field_group_list
+  name: gallery
   label: Gallery
   description: Choose an image for this field.
+  - fields:
+    - type: file
+      name: image
+      label: Image
+    - type: text
+      name: alt
+      label: Alternative text
+    - type: text
+      name: caption
+      label: Caption
+# Applicable Pages
 pages:
 - content/galleries.md
